deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: web
  labels:
    app: ui
    tier: frontend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  topologyKeys:
    - "kubernetes.io/hostname"
  selector:
    app: ui
  ports:
  # - name: web
  #   protocol: TCP
  #   port: 7070
  #   targetPort: 7070
  - name: server
    protocol: TCP
    port: 7071
    targetPort: 7071
  - name: ui
    protocol: TCP
    port: 8080
    targetPort: 8080
