deployment/convert-to-text-k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika-ui
  namespace: web
  labels:
    name: tika-ui
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "7070"
      labels:
        app: ui
    spec:
      containers:
        # - name: tika
        #   image: saidsef/tika-convert-to-text:latest
        #   imagePullPolicy: Always
        #   ports:
        #     - containerPort: 7070
        - name: server
          image: saidsef/tika-convert-to-text:server-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7071
        - name: ui
          image: saidsef/tika-convert-to-text:ui-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: web
  labels:
    app: ui
    tier: frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: NodePort
  selector:
    app: ui
  ports:
  # - protocol: TCP
  #   port: 7070
  #   targetPort: 7070
  #   name: web
  - protocol: TCP
    port: 7071
    targetPort: 7071
    name: server
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: ui
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tika-ui
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    ingress.kubernetes.io/send-timeout: "3600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      server_tokens off;
spec:
  rules:
  - host: tika-ui.saidsef.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: 8080
