deployment/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-deny-backend-egress
spec:
  podSelector:
    matchLabels:
      app: ui
  policyTypes:
    - Egress
  egress:
    - to:
       - podSelector:
           matchLabels:
             app: ui
